# lwm

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  ARCHITECTURE.md  BEHAVIOR.md  CLAUDE.md  CMakeLists.txt  COMPLETE_STATE_MACHINE.md  COMPLIANCE.md  CONTRIBUTING.md  DOCS_INDEX.md  EVENT_HANDLING.md  FEATURE_IDEAS.md  FOCUS_REFACTOR_RATIONALE.md  IMPLEMENTATION.md  MIGRATION_CLIENT_MODEL.md  Makefile  OPEN_QUESTIONS.md  README.md  ROADMAP.md  SHADERS.md  SPEC_CLARIFICATIONS.md  STATE_MACHINE.md  TODO.md  config.toml.example  drw.c  loop.sh  main.cpp  preview.sh
config/: polybar.ini
flicker_investigation/: 00_investigation_plan.md  01_phase1_agent1_implementation_analysis.md  02_phase1_agent2_flickering_sources.md  03_phase1_agent3_x11_key_handling.md  04_phase1_agent4_switch_workspace.md  05_phase1_agent5_event_loop.md  06_phase1_summary.md  07_phase2_confirmation1_keyrelease_delivery.md  08_phase2_confirmation2_event_ordering.md  09_final_conclusions.md  10_fix_applied.md  README.md
repro/overlay-kill-noop/: README.md  ghost_overlay.c  repro.sh
scripts/: launch-polybar.sh  lwm-notify-bridge.sh  lwm-notify.sh  preview.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  lwmctl.cpp  main.cpp
src/lwm/: CMakeLists.txt  wm.cpp  wm.hpp  wm_drag.cpp  wm_events.cpp  wm_ewmh.cpp  wm_floating.cpp  wm_focus.cpp  wm_restart.cpp  wm_scratchpad.cpp  wm_workspace.cpp
src/lwm/bar/: bar.cpp  bar.hpp
src/lwm/config/: config.cpp  config.hpp
src/lwm/core/: command.hpp  connection.cpp  connection.hpp  events.hpp  ewmh.cpp  ewmh.hpp  floating.cpp  floating.hpp  focus.cpp  focus.hpp  invariants.hpp  ipc.cpp  ipc.hpp  log.hpp  policy.hpp  types.hpp  window_rules.cpp  window_rules.hpp
src/lwm/keybind/: keybind.cpp  keybind.hpp
src/lwm/layout/: layout.cpp  layout.hpp  split_tree.cpp  split_tree.hpp  strategy.cpp  strategy.hpp
tests/: CMakeLists.txt  test_client_state_policy.cpp  test_config_parser.cpp  test_drag_policy.cpp  test_ewmh_classification.cpp  test_ewmh_policy.cpp  test_floating_policy.cpp  test_focus_cycling_policy.cpp  test_focus_policy.cpp  test_focus_policy_edge_cases.cpp  test_focus_restoration_policy.cpp  test_focus_visibility_policy.cpp  test_integration_client_message.cpp  test_integration_config_reload.cpp  test_integration_focus.cpp  test_integration_focus_input.cpp  test_integration_lwm_window_class.cpp  test_integration_notify_attention.cpp  test_integration_overlay.cpp  test_integration_property_notify.cpp  test_integration_scratchpad.cpp  test_integration_subscribe.cpp  test_integration_wm_state.cpp  test_integration_workspace.cpp  test_keybind_policy.cpp  test_layout_policy.cpp  test_monitor_hotplug.cpp  test_multimonitor_policy.cpp  test_split_tree.cpp  test_stacking_policy.cpp  test_window_rules.cpp  test_workspace.cpp  test_workspace_policy.cpp  x11_test_harness.hpp
